--- a/templates/index.html
+++ b/templates/index.html
@@ -8,14 +8,16 @@
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
         
+        <link href="/static/styles.css" rel="stylesheet">
+
         <title>CS50x Final Project</title>
     </head>
     
     <body>
 
-        <nav class="navbar bg-light">
+        <nav class="navbar bg-light navbar navbar-expand-md navbar-light">
             <div class="container-fluid">
-              <span class="navbar-brand mb-0 h1">Budget Tracker</span>
+              <span class="navbar-brand" id="top">Budget Tracker</span>
             </div>
           </nav>
 
